fix: overflow mobile version hero section updated

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1774,7 +1774,7 @@ body {
 }
 
 /* MOBILE VERSION */
-@media (max-width: 100vw) {
+@media (max-width: 720px) {
   /* BODY */
   body {
     padding-top: 80px !important;
@@ -1902,7 +1902,7 @@ body {
     padding-top: 40px;
     padding-left: 20px;
     padding-right: 20px;
-    overflow: visible;
+    overflow: hidden;
   }
 
   .hero-section h1,
